--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -4,6 +4,13 @@
     {% # Inlined CSS Variables %}
     {% render 'css-variables' %}
 
+     {{ content_for_header }}
+     <!-- Custom Google Font: Josefin Sans -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+
     {% # Load and preload the critical CSS %}
     {{ 'critical.css' | asset_url | stylesheet_tag: preload: true }}
     {{ 'theme.css' | asset_url | stylesheet_tag }}
