--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,23 +3,32 @@
     <img src="{{ 'Logo.png' | asset_url }}" alt="{{ shop.name }}" class="logo-image" />
   </a>
 
-  <div class="header__menu">
-    {% for link in section.settings.menu.links %}
-      {{ link.title | link_to: link.url }}
-    {% endfor %}
-  </div>
-
+  {% assign main_menu = linklists.main-menu %}
+  <nav class="header__menu">
+    {% if main_menu.links.size > 0 %}
+      {% for link in main_menu.links %}
+        {% if link.title == 'Order' %}
+          <a href="{{ link.url }}" class="order-button">{{ link.title }}</a>
+        {% else %}
+          <a href="{{ link.url }}">{{ link.title }}</a>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+  </nav>
 
   <div class="header__icons">
     {% if shop.customer_accounts_enabled %}
       {{ 'icon-account.svg' | inline_asset_content | link_to: routes.account_url }}
     {% endif %}
 
+    <a href="/search">
+      {{ 'icon-search.svg' | inline_asset_content }}
+    </a>
+
     <a href="{{ routes.cart_url }}">
       {% if cart.item_count > 0 %}
         <sup>{{ cart.item_count }}</sup>
       {% endif %}
-
       {{ 'icon-cart.svg' | inline_asset_content }}
     </a>
   </div>
@@ -32,31 +41,62 @@
   width: auto;
 }
 
-  header {
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  header a {
-    position: relative;
-    text-decoration: none;
-    color: var(--color-foreground);
-  }
-  header a sup {
-    position: absolute;
-    left: 100%;
-    overflow: hidden;
-    max-width: var(--page-margin);
-  }
-  header svg {
-    width: 2rem;
-  }
-  header .header__menu,
-  header .header__icons {
-    display: flex;
-    gap: 1rem;
-  }
+header {
+  height: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header a {
+  position: relative;
+  text-decoration: none;
+  color: var(--color-foreground);
+}
+
+header a sup {
+  position: absolute;
+  left: 100%;
+  overflow: hidden;
+  max-width: var(--page-margin);
+}
+
+header svg {
+  width: 2rem;
+}
+
+header .header__menu,
+header .header__icons {
+  display: flex;
+  gap: 1rem;
+}
+
+header .header__menu a {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 1rem 1rem;
+}
+
+header .header__menu a.order-button {
+  padding: 0.75rem 2rem !important;
+  height: auto;
+  background-color: #a3a154;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 9999px;
+  display: inline-flex;
+  align-items: center;
+  line-height: 1.2;
+}
+header .header__menu a.order-button:hover {
+  background-color: #8b8b40;
+}
+
+
+
 {% endstylesheet %}
 
 {% schema %}
